# offline-llm-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/offlinellm/: MainActivity.kt
app/src/main/java/com/example/offlinellm/data/local/: Entities.kt  SettingsStore.kt
app/src/main/java/com/example/offlinellm/data/repo/: Repositories.kt
app/src/main/java/com/example/offlinellm/domain/: Models.kt
app/src/main/java/com/example/offlinellm/nativebridge/: LlamaNativeBridge.kt
app/src/main/java/com/example/offlinellm/ui/localization/: LocaleManager.kt
app/src/main/java/com/example/offlinellm/ui/screens/: Screens.kt
app/src/main/java/com/example/offlinellm/ui/theme/: AppTheme.kt
app/src/main/java/com/example/offlinellm/viewmodel/: ViewModels.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/test/java/com/example/offlinellm/: SettingsViewModelTest.kt
docs/: ARCHITECTURE.md
native/: README.md
